Improvised the code